--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,3 @@
-# Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/logindb
-spring.datasource.username=youruser
-spring.datasource.password=yourpassword
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# Hibernate Settings
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
 # JWT Configuration
 jwt.secret=yourverylongsecretkeyforjwttokenencryptionhere
 jwt.expiration=86400000
@@ -19,3 +8,17 @@ logging.level.org.springframework.web=DEBUG
 
 # Server Configuration
 server.port=8080
+
+# MySQL Datasource Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/logindb
+spring.datasource.username=loginuser
+spring.datasource.password=strong_password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# JNDI Datasource Configuration
+spring.datasource.jndi-name=java:/LoginSystemDS
