--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,10 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         
-        <!-- PostgreSQL Driver -->
+        <!-- Replace PostgreSQL dependency with MySQL -->
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
         
